--- a/Website.html
+++ b/Website.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <title>Hello World Website</title>
     <script>
-        function function-name() {
-            // >>> put a prompt here, ask the user for a new name <<< 
-            // Use document.getElementById("your id").textContent = .... to change the level 1 header to say something new
+        function functionName() {
+            console.log("button clicked");
+            document.getElementById("your-id-here").textContent = "Hello " + document.getElementById("name-input").value + "!";
         }
     </script>
 </head>
 <body>
     <h1 id="your-id-here">Hello, World!</h1>
-    <button onclick="function-name()">label-on-button</button>
+    <input id="name-input" type="text" placeholder="name">
+    <button onclick="functionName()">label-on-button</button>
 </body>
 </html>
